// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: shDecom6_2 → INET C++ > pM1 1`] = `
[
  {
    "content": "#pragma once
#include <map>
#include <set>
#include <utility>
#include "eb_helpers.h"
#include "eb_context.h"
#include "inet/routing/base/RoutingProtocolBase.h"

using namespace inet;

class Pm1App : public RoutingProtocolBase {
  protected:
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;

    // OperationalBase pure virtuals — empty stubs keep the module concrete
    // (real message handling is the network-layer next step).
    void handleMessageWhenUp(cMessage *msg) override { delete msg; }
    void handleStartOperation(LifecycleOperation *op) override {}
    void handleStopOperation(LifecycleOperation *op) override {}
    void handleCrashOperation(LifecycleOperation *op) override {}

    // Application-layer events (translated from the Event-B pattern machine).
    bool creatingPkt(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool send_down(Node x, PktId pkt);
    bool send_up(Node x, PktId pkt, int nbrs);
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);

  public:
    Pm1App();
};
",
    "path": "Pm1App.h",
  },
  {
    "content": "#include "Pm1App.h"

Define_Module(Pm1App);

Pm1App::Pm1App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
}

bool Pm1App::creatingPkt(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(x == initialSrcAddr.at(pkt))) return false;
    if (!(des == finalDestAddr.at(pkt))) return false;
    if (!(pktFwdr.count(pkt) == 0)) return false;
    if (!(pktData.count(pkt) == 0)) return false;
    if (!(ndBuff.count({x, pkt}) == 0)) return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Pm1App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0)) return false;
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(pktFwdr.count(pkt) > 0)) return false;
    if (!(ndBuff.count({x, pkt}) > 0)) return false;
    sentDown.insert({x, pkt});
    ndBuff.erase({x, pkt});
    return true;
}

bool Pm1App::send_down(Node x, PktId pkt) {
    return sentDown.count({x, pkt}) > 0;
}

bool Pm1App::send_up(Node x, PktId pkt, int nbrs) {
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(sentDown.count({x, pkt}) > 0)) return false;
    if (!(ctlNeighbours.count(pkt) == 0)) return false;
    if (!(!nbrs.empty())) return false;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Pm1App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0)) return false;
    if (!(sentUp.count({nb, pkt}) == 0)) return false;
    if (!(sentDown.count({nb, pkt}) == 0)) return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Pm1App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0)) return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Pm1App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(Dests.count(nb) == 0)) return false;
    if (!(ndBuff.count({nb, pkt}) == 0)) return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Pm1App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(destBuff.count({nb, pkt}) == 0)) return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Pm1App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(inDom(sentUp, x))) return false;
    if (!(sentUp.count({x, pkt}) > 0)) return false;
    if (!(inRan(ndBuff, pkt))) return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Pm1App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(!inRan(ndBuff, pkt))) return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}
",
    "path": "Pm1App.cc",
  },
  {
    "content": "import inet.routing.base.RoutingProtocolBase;

//
// Generated application-layer module from the WSN pattern machine pM1.
// Network-layer wiring (handleUpper/LowerPacket bodies) is the next step.
//
simple Pm1App extends RoutingProtocolBase
{
    parameters:
        @class(Pm1App);
        @display("i=block/app");
}
",
    "path": "Pm1App.ned",
  },
]
`;

exports[`snapshot: shDecom6_2 → INET C++ > pM3 1`] = `
[
  {
    "content": "#pragma once
#include <map>
#include <set>
#include <utility>
#include "eb_helpers.h"
#include "eb_context.h"
#include "inet/routing/base/RoutingProtocolBase.h"

using namespace inet;

class Pm3App : public RoutingProtocolBase {
  protected:
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;
    std::map<Node, bool> ctlSensedFlg;
    std::map<Node, std::set<Data>> senseBuff;

    // OperationalBase pure virtuals — empty stubs keep the module concrete
    // (real message handling is the network-layer next step).
    void handleMessageWhenUp(cMessage *msg) override { delete msg; }
    void handleStartOperation(LifecycleOperation *op) override {}
    void handleStopOperation(LifecycleOperation *op) override {}
    void handleCrashOperation(LifecycleOperation *op) override {}

    // Application-layer events (translated from the Event-B pattern machine).
    bool sensing(Node x, bool sf, Data data);
    bool creatingDataPacket(Node x, int des, PktId pkt, Data data);
    bool creatingControlPacket(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool send_down(Node x, PktId pkt);
    bool send_up(Node x, PktId pkt, int nbrs);
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);

  public:
    Pm3App();
};
",
    "path": "Pm3App.h",
  },
  {
    "content": "#include "Pm3App.h"

Define_Module(Pm3App);

Pm3App::Pm3App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
    for (int _n : ND) if (Dests.count(_n) == 0) ctlSensedFlg[_n] = FALSE;
    for (int _n : ND) if (Dests.count(_n) == 0) senseBuff[_n] = {};
}

bool Pm3App::sensing(Node x, bool sf, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(ctlSensedFlg.count(x) > 0)) return false;
    if (!(ctlSensedFlg.at(x) == FALSE)) return false;
    ctlSensedFlg[x] = sf;
    senseBuff[x].insert(data);
    return true;
}

bool Pm3App::creatingDataPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(x == initialSrcAddr.at(pkt))) return false;
    if (!(des == finalDestAddr.at(pkt))) return false;
    if (!(pktFwdr.count(pkt) == 0)) return false;
    if (!(pktData.count(pkt) == 0)) return false;
    if (!(ndBuff.count({x, pkt}) == 0)) return false;
    if (!(type.at(pkt) == DATA)) return false;
    if (!(!senseBuff.empty())) return false;
    if (!((senseBuff.count(x) > 0 && senseBuff.at(x).count(data) > 0))) return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    senseBuff[x].erase(data); if (senseBuff[x].empty()) senseBuff.erase(x);
    return true;
}

bool Pm3App::creatingControlPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(x == initialSrcAddr.at(pkt))) return false;
    if (!(des == finalDestAddr.at(pkt))) return false;
    if (!(pktFwdr.count(pkt) == 0)) return false;
    if (!(pktData.count(pkt) == 0)) return false;
    if (!(ndBuff.count({x, pkt}) == 0)) return false;
    if (!(data == CTL_VAL)) return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Pm3App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0)) return false;
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(pktFwdr.count(pkt) > 0)) return false;
    if (!(ndBuff.count({x, pkt}) > 0)) return false;
    sentDown.insert({x, pkt});
    ndBuff.erase({x, pkt});
    return true;
}

bool Pm3App::send_down(Node x, PktId pkt) {
    return sentDown.count({x, pkt}) > 0;
}

bool Pm3App::send_up(Node x, PktId pkt, int nbrs) {
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(sentDown.count({x, pkt}) > 0)) return false;
    if (!(ctlNeighbours.count(pkt) == 0)) return false;
    if (!(!nbrs.empty())) return false;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Pm3App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0)) return false;
    if (!(sentUp.count({nb, pkt}) == 0)) return false;
    if (!(sentDown.count({nb, pkt}) == 0)) return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Pm3App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0)) return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Pm3App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(Dests.count(nb) == 0)) return false;
    if (!(ndBuff.count({nb, pkt}) == 0)) return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Pm3App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(destBuff.count({nb, pkt}) == 0)) return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Pm3App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(inDom(sentUp, x))) return false;
    if (!(sentUp.count({x, pkt}) > 0)) return false;
    if (!(inRan(ndBuff, pkt))) return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Pm3App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(!inRan(ndBuff, pkt))) return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}
",
    "path": "Pm3App.cc",
  },
  {
    "content": "import inet.routing.base.RoutingProtocolBase;

//
// Generated application-layer module from the WSN pattern machine pM3.
// Network-layer wiring (handleUpper/LowerPacket bodies) is the next step.
//
simple Pm3App extends RoutingProtocolBase
{
    parameters:
        @class(Pm3App);
        @display("i=block/app");
}
",
    "path": "Pm3App.ned",
  },
]
`;

exports[`snapshot: shDecom6_2 → INET C++ > uM2 1`] = `
[
  {
    "content": "#pragma once
#include <map>
#include <set>
#include <utility>
#include "eb_helpers.h"
#include "eb_context.h"
#include "inet/routing/base/RoutingProtocolBase.h"

using namespace inet;

class Um2App : public RoutingProtocolBase {
  protected:
    std::map<PktId, Node> pktFwdr;
    std::map<PktId, Data> pktData;
    std::set<PktId> createdPkts;
    std::set<std::pair<Node, PktId>> ndBuff;
    std::set<std::pair<Node, PktId>> sentUp;
    std::set<std::pair<Node, PktId>> sentDown;
    std::map<PktId, std::set<Node>> ctlNeighbours;
    std::set<std::pair<Node, PktId>> destBuff;
    std::set<std::pair<Node, PktId>> recvBuff;
    std::set<std::pair<Node, PktId>> clrRecvBuffFlg;

    // OperationalBase pure virtuals — empty stubs keep the module concrete
    // (real message handling is the network-layer next step).
    void handleMessageWhenUp(cMessage *msg) override { delete msg; }
    void handleStartOperation(LifecycleOperation *op) override {}
    void handleStopOperation(LifecycleOperation *op) override {}
    void handleCrashOperation(LifecycleOperation *op) override {}

    // Application-layer events (translated from the Event-B pattern machine).
    bool creatingControlPacket(Node x, int des, PktId pkt, Data data);
    bool start_tx(Node x, PktId pkt);
    bool send_down(Node x, PktId pkt);
    bool send_up(Node x, PktId pkt, int nbrs);
    bool receive(Node nb, PktId pkt);
    bool clear_recvdBuff(Node nb, PktId pkt);
    bool fwdr_receive_pkt(Node nb, PktId pkt);
    bool dest_recv_pkt(Node nb, PktId pkt);
    bool finish_tx_pkt(Node x, PktId pkt);
    bool final_tx_pkt(PktId pkt);
    bool creatingDataPacket(Node x, int des, PktId pkt, Data data);

  public:
    Um2App();
};
",
    "path": "Um2App.h",
  },
  {
    "content": "#include "Um2App.h"

Define_Module(Um2App);

Um2App::Um2App() {
    pktFwdr.clear();
    pktData.clear();
    createdPkts.clear();
    ndBuff.clear();
    sentUp.clear();
    sentDown.clear();
    ctlNeighbours.clear();
    destBuff.clear();
    recvBuff.clear();
    clrRecvBuffFlg.clear();
}

bool Um2App::creatingControlPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(x == initialSrcAddr.at(pkt))) return false;
    if (!(des == finalDestAddr.at(pkt))) return false;
    if (!(pktFwdr.count(pkt) == 0)) return false;
    if (!(pktData.count(pkt) == 0)) return false;
    if (!(ndBuff.count({x, pkt}) == 0)) return false;
    if (!(data == CTL_VAL)) return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}

bool Um2App::start_tx(Node x, PktId pkt) {
    if (!(sentDown.count({x, pkt}) == 0)) return false;
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(pktFwdr.count(pkt) > 0)) return false;
    if (!(ndBuff.count({x, pkt}) > 0)) return false;
    sentDown.insert({x, pkt});
    ndBuff.erase({x, pkt});
    return true;
}

bool Um2App::send_down(Node x, PktId pkt) {
    return sentDown.count({x, pkt}) > 0;
}

bool Um2App::send_up(Node x, PktId pkt, int nbrs) {
    if (!(sentUp.count({x, pkt}) == 0)) return false;
    if (!(sentDown.count({x, pkt}) > 0)) return false;
    if (!(ctlNeighbours.count(pkt) == 0)) return false;
    if (!(!nbrs.empty())) return false;
    for (auto _v : nbrs) ctlNeighbours[pkt].insert(_v);
    sentDown.erase({x, pkt});
    sentUp.insert({x, pkt});
    return true;
}

bool Um2App::receive(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) == 0)) return false;
    if (!(sentUp.count({nb, pkt}) == 0)) return false;
    if (!(sentDown.count({nb, pkt}) == 0)) return false;
    recvBuff.insert({nb, pkt});
    ctlNeighbours[pkt].erase(nb); if (ctlNeighbours[pkt].empty()) ctlNeighbours.erase(pkt);
    return true;
}

bool Um2App::clear_recvdBuff(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) > 0)) return false;
    recvBuff.erase({nb, pkt});
    return true;
}

bool Um2App::fwdr_receive_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(Dests.count(nb) == 0)) return false;
    if (!(ndBuff.count({nb, pkt}) == 0)) return false;
    clrRecvBuffFlg.insert({nb, pkt});
    ndBuff.insert({nb, pkt});
    return true;
}

bool Um2App::dest_recv_pkt(Node nb, PktId pkt) {
    if (!(recvBuff.count({nb, pkt}) > 0)) return false;
    if (!(clrRecvBuffFlg.count({nb, pkt}) == 0)) return false;
    if (!(destBuff.count({nb, pkt}) == 0)) return false;
    destBuff.insert({nb, pkt});
    clrRecvBuffFlg.insert({nb, pkt});
    return true;
}

bool Um2App::finish_tx_pkt(Node x, PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(inDom(sentUp, x))) return false;
    if (!(sentUp.count({x, pkt}) > 0)) return false;
    if (!(inRan(ndBuff, pkt))) return false;
    sentUp.erase({x, pkt});
    return true;
}

bool Um2App::final_tx_pkt(PktId pkt) {
    if (!((ctlNeighbours.count(pkt) == 0 || ctlNeighbours.at(pkt).empty()))) return false;
    if (!(inRan(sentUp, pkt))) return false;
    if (!(!inRan(sentDown, pkt))) return false;
    if (!(!inRan(ndBuff, pkt))) return false;
    for (auto it = sentUp.begin(); it != sentUp.end(); ) it->second == pkt ? it = sentUp.erase(it) : ++it;
    return true;
}

bool Um2App::creatingDataPacket(Node x, int des, PktId pkt, Data data) {
    if (!((ND.count(x) > 0 && Dests.count(x) == 0))) return false;
    if (!(x == initialSrcAddr.at(pkt))) return false;
    if (!(des == finalDestAddr.at(pkt))) return false;
    if (!(pktFwdr.count(pkt) == 0)) return false;
    if (!(pktData.count(pkt) == 0)) return false;
    if (!(ndBuff.count({x, pkt}) == 0)) return false;
    if (!(type.at(pkt) == DATA)) return false;
    createdPkts.insert(pkt);
    pktFwdr[pkt] = x;
    pktData[pkt] = data;
    ndBuff.insert({x, pkt});
    return true;
}
",
    "path": "Um2App.cc",
  },
  {
    "content": "import inet.routing.base.RoutingProtocolBase;

//
// Generated application-layer module from the WSN pattern machine uM2.
// Network-layer wiring (handleUpper/LowerPacket bodies) is the next step.
//
simple Um2App extends RoutingProtocolBase
{
    parameters:
        @class(Um2App);
        @display("i=block/app");
}
",
    "path": "Um2App.ned",
  },
]
`;
